# KorepetycjeApp

./: AuthManager.h  CMakeLists.txt  README.md  authmanager.cpp  communicationtool.cpp  communicationtool.h  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  time.cpp  time.h  user.cpp  user.h  useravailability.cpp  useravailability.h
